feat(admin): 添加聊天上下文和输出配置管理功能
- 新增后台管理英文词典条目支持上下文和输出设置
- 添加 AdminChatContextController 管理全局上下文配置与模型覆盖
- 添加 AdminChatOutputController 管理全局输出配置与模型覆盖
- 修改 AdminModelController 忽略旧模型编辑页的输出配置字段
- 重构 BudgetReservationService 使用统一的输出配置策略
- 添加聊天消息底部中断/上限提示样式和组件支持
- 新增 ChatOutputSettings 组件实现上下文和输出配置界面
- 更新 ChatController 支持聊天流超时配置和上下文容量返回
- 添加 useChatContext 支持聊天流草稿恢复功能